--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
-    "request": "~2.33.0"
+    "request": "~2.33.0",
+    "cheerio": "~0.16.0",
+    "lodash-node": "~2.4.1"
   }
 }
