--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.3.0",
     "request": "~2.33.0",
     "cheerio": "~0.16.0",
-    "lodash-node": "~2.4.1"
+    "lodash-node": "~2.4.1",
+    "escape-html": "~1.0.1"
   }
 }
